--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,3 +32,23 @@ jobs:
         aws-region: ap-south-a
         # AWS Account ID
         aws-account-id: ${{ secrets.awsaccountid }}
+        
+    - name: Kubectl Apply
+      # You may pin to the exact commit or the version.
+      # uses: okteto/apply@4e27118456f347c5ef86dac30476118540dd5581
+      uses: okteto/apply@v4.2
+      with:
+        # Path to the Kubernetes manifest. Can be a file or a directory
+        manifest: myapp-deploy.yml
+        # If present, the namespace scope for this action. If not specified, it will use the current context
+        namespace: default
+        
+    - name: Kubectl Apply
+      # You may pin to the exact commit or the version.
+      # uses: okteto/apply@4e27118456f347c5ef86dac30476118540dd5581
+      uses: okteto/apply@v4.2
+      with:
+        # Path to the Kubernetes manifest. Can be a file or a directory
+        manifest: myappservice.yml
+        # If present, the namespace scope for this action. If not specified, it will use the current context
+        namespace: default
