--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
         # AWS Secret Access Key
         aws-secret-access-key: ${{ secrets.awssecretkeyid }}
         # AWS Region
-        aws-region: ap-south-a
+        aws-region: ap-south-1
         # AWS Account ID
         aws-account-id: ${{ secrets.awsaccountid }}
         
