--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,22 +33,35 @@ jobs:
         # AWS Account ID
         aws-account-id: ${{ secrets.awsaccountid }}
         
-    - name: Kubectl Apply
+    - name: EKS kubectl
       # You may pin to the exact commit or the version.
-      # uses: okteto/apply@4e27118456f347c5ef86dac30476118540dd5581
-      uses: okteto/apply@v4.2
+      # uses: ianbelcher/eks-kubectl-action@b6d62d4aff4b503b3ce8174ab53200e44d01638d
+      uses: ianbelcher/eks-kubectl-action@1.3
       with:
-        # Path to the Kubernetes manifest. Can be a file or a directory
-        manifest: myapp-deploy.yml
-        # If present, the namespace scope for this action. If not specified, it will use the current context
-        namespace: default
+        # Your AWS_ACCESS_KEY_ID
+        aws_access_key_id: ${{ secrets.awsaccesskeyid }}
+        # Your AWS_SECRET_ACCESS_KEY
+        aws_secret_access_key: ${{ secrets.awssecretkeyid }}
+        # The region of the cluster
+        aws_region: ap-south-1
+        # The name of the cluster you're using
+        cluster_name: myekscluster
+        # The arguments that you want to pass through to the kubectl command
+        args: apply -f myapp-deploy.yml
         
-    - name: Kubectl Apply
+    - name: EKS kubectl
       # You may pin to the exact commit or the version.
-      # uses: okteto/apply@4e27118456f347c5ef86dac30476118540dd5581
-      uses: okteto/apply@v4.2
+      # uses: ianbelcher/eks-kubectl-action@b6d62d4aff4b503b3ce8174ab53200e44d01638d
+      uses: ianbelcher/eks-kubectl-action@1.3
       with:
-        # Path to the Kubernetes manifest. Can be a file or a directory
-        manifest: myappservice.yml
-        # If present, the namespace scope for this action. If not specified, it will use the current context
-        namespace: default
+        # Your AWS_ACCESS_KEY_ID
+        aws_access_key_id: ${{ secrets.awsaccesskeyid }}
+        # Your AWS_SECRET_ACCESS_KEY
+        aws_secret_access_key: ${{ secrets.awssecretkeyid }}
+        # The region of the cluster
+        aws_region: ap-south-1
+        # The name of the cluster you're using
+        cluster_name: myekscluster
+        # The arguments that you want to pass through to the kubectl command
+        args: apply -f myappservice.yml
+    
