--- a/myapp-deploy.yml
+++ b/myapp-deploy.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: myapp-feature-a
   labels:
-    app: myapp
+    app: myapp-feature-a
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: myapp
+      app: myapp-feature-a
   template:
     metadata:
       labels:
-        app: myapp
+        app: myapp-feature-a
     spec:
       containers:
-      - name: myapp
-        image: 366449471548.dkr.ecr.ap-south-1.amazonaws.com/myapp:latest
+      - name: myapp-feature-a
+        image: 366449471548.dkr.ecr.ap-south-1.amazonaws.com/myapp-feature-a:latest
         ports:
         - containerPort: 3000
       imagePullSecrets:
