--- a/myappservice.yml
+++ b/myappservice.yml
@@ -1,15 +1,15 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: myapp
+  name: myapp-feature-b
   labels:
-    app: myapp
+    app: myapp-feature-b
 spec:
   selector:
-    app: myapp
+    app: myapp-feature-b
   type: LoadBalancer
   ports:
   - protocol: TCP
     port: 3000
     targetPort: 80
-    name: application
+    name: myapp-feature-b
