--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag myapp
+      run: docker build . --file Dockerfile --tag myapp-feature-a
       
     - name: Push AWS ECR
       # You may pin to the exact commit or the version.
